@@ -269,7 +269,7 @@ function apachesolr_settings($form, &$form_state) {
           'admin/config/search/apachesolr/settings/' . $data['env_id'] . '/facets',
           array('query' => array('destination' => current_path()))
         ),
-     );
+      );
     }
     // These are our result and bias settings
     if (module_exists('apachesolr_search')) {
@@ -292,7 +292,7 @@ function apachesolr_settings($form, &$form_state) {
       'class' => 'operation',
       'data' => l(t('Edit'),
         'admin/config/search/apachesolr/settings/' . $data['env_id'] . '/edit',
-         array('query' => array('destination' => current_path()))
+        array('query' => array('destination' => current_path()))
       ),
     );
 
@@ -303,7 +303,7 @@ function apachesolr_settings($form, &$form_state) {
         array('query' => array('destination' => $_GET['q']))
       ),
     );
-    $env_name = l(check_plain($data['name']), 'admin/config/search/apachesolr/settings/' . $data['env_id'] . '/edit', array('query' => array('destination' => $_GET['q'])));
+    $env_name = l($data['name'], 'admin/config/search/apachesolr/settings/' . $data['env_id'] . '/edit', array('query' => array('destination' => $_GET['q'])));
     // Is this row our default environment?
     if ($environment_id == $default_environment) {
       $env_name = t('!environment <em>(Default)</em>', array('!environment' => $env_name));
