@@ -226,7 +226,7 @@ function apachesolr_index_add_tags_to_document(&$document, $text) {
 
   preg_match_all('@<(' . implode('|', array_keys($tags_to_index)) . ')[^>]*>(.*)</\1>@Ui', $text, $matches);
   foreach ($matches[1] as $key => $tag) {
-    $tag = strtolower($tag);
+    $tag = drupal_strtolower($tag);
     // We don't want to index links auto-generated by the url filter.
     if ($tag != 'a' || !preg_match('@(?:http://|https://|ftp://|mailto:|smb://|afp://|file://|gopher://|news://|ssl://|sslv2://|sslv3://|tls://|tcp://|udp://|www\.)[a-zA-Z0-9]+@', $matches[2][$key])) {
       if (!isset($document->{$tags_to_index[$tag]})) {
