@@ -16,7 +16,7 @@ function apachesolr_search_install() {
     'apachesolr_search_browse' => 'results',
     'apachesolr_search_spellcheck' => FALSE,
     'apachesolr_search_search_box' => FALSE,
-   );
+  );
   $settings = serialize($settings);
 
   $fields = array(
@@ -317,7 +317,7 @@ function apachesolr_search_update_7004() {
     'apachesolr_search_browse' => 'results',
     'apachesolr_search_spellcheck' => FALSE,
     'apachesolr_search_search_box' => FALSE,
-   );
+  );
   $settings = serialize($settings);
 
   $fields = array(
