@@ -15,7 +15,8 @@
  * Notice how this structure closely resembles how
  * you define menu hooks.
  *
- * @see drush_parse_command() for a list of recognized keys.
+ * @see drush_parse_command()
+ *   for a list of recognized keys.
  *
  * @return
  *   An associative array describing your command(s).
